--- a/src/Energy.css
+++ b/src/Energy.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: baseline;
-    justify-content: right;
+    justify-content: center;
     gap: 3px;
 }
 .energy.hud {
